# HawkNeticSportsTools

./: .env.example  .firebaserc  .gitignore  AGENTS.md  DATA_FLOW_DOCUMENTATION.md  DEPLOYMENT.md  FIREBASE_DEPLOYMENT.md  HAWKNETIC_MASTER_SPEC.md  Procfile  README.md  README_LLM_SETUP.md  compose.yml  firebase.json  frontend  next.config.js  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway.json  run_paper.py  tailwind.config.ts  tsconfig.json
.emergent/: emergent.yml
.next/: app-build-manifest.json  build-manifest.json  trace
__mocks__/: games.json  props.json  simulation.json
app/: __init__.py  globals.css  layout.tsx  page.tsx  providers.tsx
backend/: requirements.txt  server.py
bootstrap/: README.md
components/: BetSlip.tsx  DistributionChart.tsx  EvTable.tsx  GamePicker.tsx  LineSparkline.tsx  LoadingSkeleton.tsx  MatchupCard.tsx  Navigation.tsx  OddsPanel.tsx  PropTable.tsx  SgpComposer.tsx  WhyDrawer.tsx
config/: public_intel.example.json  sources.example.json
docs/: architecture_decisions_and_rules.md  backend-api-contract.md  backend-architecture-audit.md  competitive-capability-analysis.md  competitive-platform-architecture.md  competitive-platform-roadmap.md  current-product-gap-analysis.md  data-cutover-validation.md  database-schema-audit.md  deployment-readiness-checklist.md  github-railway-firecrawl-workflow.md  implementation-report-2026-07-12.md  implementation-report-postgres-cutover.md  nba_betting_backend_spec.md  near-production-readiness.md  odds-provider-evaluation.md  operator-runbook.md  (+10 more)
frontend/: README.md  (+4 more)
(+428 files in other folders)
