[project]
name = "kalshi-research-bot"
version = "0.1.0"
description = "Local research and modeling pipeline for Kalshi sports markets"
requires-python = ">=3.10"
dependencies = [
    "psycopg[binary]>=3.2,<4",
    "psycopg_pool>=3.2,<4",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.2,<4",
    "psycopg_pool>=3.2,<4",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
